force-app/main/default/objects/Manage_Id__c/Manage_Id__c.object-meta.xml
<CustomObject>
    <label>Manage Id</label>
    <nameField>
        <displayFormat>Object-{0000}</displayFormat>
        <label>Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manage Ids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>