force-app/main/default/objects/Manage_Id__c/fields/Object_setup_name__c.field-meta.xml
<CustomField>
    <fullName>Object_setup_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Object setup name</label>
    <referenceTo>Object_setup__c</referenceTo>
    <relationshipLabel>Manage Ids</relationshipLabel>
    <relationshipName>Manage_Ids</relationshipName>
    <type>Lookup</type>
</CustomField>