force-app/main/default/objects/Manage_Id__c/fields/Old_id__c.field-meta.xml
<CustomField>
    <fullName>Old_id__c</fullName>
    <label>Old id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>