force-app/main/default/objects/Manage_Id__c/fields/Source_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_Name__c</fullName>
    <formula>Object_setup_name__r.Name</formula>
    <label>Source Object Name</label>
    <type>Text</type>
</CustomField>